--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}GENUS{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'styles/layout.css' %}">
+    
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
     <aside class="menu" id="menu">
@@ -31,7 +33,7 @@
                         </button>
                         {% if user.is_authenticated %}
                             <a href=""><img src="" alt="Gamificacao"></a>
-                            <a href="./perfil.html"><i><img src="" alt="user-pic"></i></a>
+                            <a href="{% url 'jornal:configuracoes_conta' %}"><i><img src="" alt="user-pic"></i></a>
                         {% else %}
                             <a href="{% url 'login' %}"><i><img src="{% static 'assets/icons/Avatar.png' %}" alt="Perfil-icon" class="icon-perfil"></i></a>
                         {% endif %}
@@ -54,9 +56,10 @@
         </main>
 
         <footer>
-
-        </footer>
+            </footer>
     
     <script src="{% static 'scripts/layout.js' %}"></script>
+
+    {% block extra_scripts %}{% endblock %}
 </body>
 </html>
