--- a/templates/pagina-noticia.html
+++ b/templates/pagina-noticia.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+{% load static %}
 
 {% block title %}{{ noticia.titulo }} | GENUS{% endblock %}
 
@@ -17,12 +18,25 @@
 
     {% if user.is_authenticated %}
         
-        <a href="{% url 'jornal:add_aos_fav' noticia_id=noticia.id %}" class="btn-favorito">
-            Adicionar aos Favoritos
-        </a>
+        <button 
+            id="btn-toggle-favorito"
+            class="noticia-card-link btn-favorito {% if is_favorito %}favorito-ativo{% endif %}"
+            data-noticia-id="{{ noticia.id }}"
+            data-toggle-url="{% url 'jornal:toggle_favorito' noticia.id %}"
+        >
+            {% if is_favorito %}
+                Remover dos Favoritos
+            {% else %}
+                Adicionar aos Favoritos
+            {% endif %}
+        </button>
         
     {% else %}
         <p>Faça login para adicionar aos favoritos.</p>
     {% endif %}
 </article>
+{% endblock %}
+
+{% block extra_scripts %}
+    <script src="{% static 'scripts/favoritos.js' %}"></script>
 {% endblock %}
