Corrigindo botao de filtrar noticias

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,7 +50,7 @@
 
                 </nav>
                 
-                <div class="div-pesquisa" id="div-pesquisa">
+                <div class="div-pesquisa" id="div-pesquisa" style="flex-direction: column;">
                     
                     <form method="GET" action="{% url 'jornal:index' %}" style="width: 100%;">
                         <section>
