Ajustando de volta pós teste deploy

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
         {% if query %}
             <h1 class="titulo-principal">Resultados da pesquisa para: "{{ query }}"</h1>
         {% else %}
-            <h1 class="titulo-principal">Últimas Notícias deploy2.0</h1>
+            <h1 class="titulo-principal">Últimas Notícias</h1>
         {% endif %}
 
         <div class="lista-noticias {% if not query %}ultimas-noticias-scroll{% endif %}">
