ajeitando a navbar do site

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,9 +12,12 @@
 </head>
 <body>
     <aside class="menu" id="menu">
-        <button onclick="closeMenu()">
-            <i><img src="{% static 'assets/icons/x.png' %}" alt="Fechar-Menu"></i>
-        </button>
+        <div>
+            <button onclick="closeMenu()">
+                <i><img src="{% static 'assets/icons/x.png' %}" alt="Fechar-Menu"></i>
+            </button>
+        </div>
+        
         
         <ul style="list-style: none; padding: 20px; font-size: 1.2em;">
             <li style="margin-bottom: 15px;">
