--- a/static/styles/layout.css
+++ b/static/styles/layout.css
@@ -18,10 +18,13 @@ header {
 .nav-uol {
     background-color: #111;
     padding: 10px 20px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
 }
-.nav-uol img {
-    height: 18px;
+.nav-uol > img {
+    height: 40px;
 }
 
 .nav-jc {
@@ -31,10 +34,11 @@ header {
     padding: 10px 20px;
     max-width: 1200px; 
     margin: 0 auto;
+    height: 40px;
 }
 
 .nav-jc > a img {
-    height: 50px;
+    height: 70px;
     display: block;
 }
 
@@ -69,9 +73,10 @@ header {
 
 .menu-button div {
     width: 100%;
-    height: 3px;
-    background-color: #333;
+    height: 4px;
+    background-color: #000;
     border-radius: 2px;
+
 }
 
 .div-pesquisa {
@@ -86,20 +91,25 @@ header {
     display: flex;
     max-width: 1200px;
     margin: 0 auto;
+    border-radius: 10px;
+    overflow: hidden;
+    border: 1px solid black;
 }
 
-.div-pesquisa input[type="text"] {
-    flex-grow: 1;
-    border: 1px solid #ccc;
-    padding: 15px;
+.div-pesquisa section input[type="text"] {
+    padding-top: 15px;
+    padding-bottom: 15px;
     font-size: 1.1em;
+    border: none;
+    background: none;
+    width: 93%;
+    outline: none;
 }
 
-.div-pesquisa button {
+.div-pesquisa section button {
     padding: 0 15px;
-    border: 1px solid #ccc;
-    border-left: none;
-    background-color: #eee;
+    background: none;
+    border: none;
     cursor: pointer;
 }
 .div-pesquisa button img {
@@ -122,6 +132,17 @@ header {
 
 .menu.active {
     right: 0;
+}
+
+.menu div {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.menu div button {
+    background: none;
+    border: none;
+    cursor: pointer;
 }
 
 .overlay {
