mudanca no html

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,10 @@
         
         <ul style="list-style: none; padding: 20px; font-size: 1.2em;">
             <li style="margin-bottom: 15px;">
-                <a href="{% url 'jornal:favoritos' %}" style="text-decoration: none; color: #333;">Notícias Favoritas</a>
+                <a href="{% url 'jornal:favoritos' %}" style="text-decoration: none; color: #f333;">Noticias Favoritas</a>
+            </li>
+            <li style="margin-bottom: 15px;">
+                <a href="{% url 'aval:feedback' %}" style="text-decoration: none; color: #f333;">Feedback</a>
             </li>
         </ul>
         
