Adicao de admin secreto

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
     <title>{% block title %}GENUS{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'styles/layout.css' %}">
     
-    {% block extra_css %}{% endblock %}
+    {% block head_extra %}{% endblock %}
 </head>
 <body>
     <aside class="menu" id="menu">
