--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,7 +45,7 @@
                             <div></div>
                         </button>
                         {% if user.is_authenticated %}
-                            <a href=""><img src="" alt="Gamificacao"></a>
+                            <a href="{% url 'jornal:gamificacao' %}"><img src="" alt="Gamificacao"></a>
                             
                             <a href="{% url 'jornal:configuracoes_conta' %}"><i><img src="{% static 'assets/icons/Avatar.png' %}" alt="user-pic" class="icon-perfil"></i></a>
                         
