--- a/templates/gamificacao.html
+++ b/templates/gamificacao.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% load static %}
 
-{% block title %}Minhas Notícias Favoritas{% endblock %}
+{% block title %}Minha Árvore{% endblock %}
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'styles/gamificacao.css' %}">
@@ -9,21 +9,27 @@
 
 {% block content %}
 
-    <a href="#" onclick=onclick="window.history.back()" class="arrow-back-link"><i><img src="{% static 'assets/icons/backarrow.png' %}" alt="Voltar"></a>
+    <a href="#" onclick="window.history.back()" class="arrow-back-link">
+        <i><img src="{% static 'assets/icons/backarrow.png' %}" alt="Voltar"></i>
+    </a>
+    
     <div class="gamificacao-info">
-        <img src="{% static 'assets/imgs/Arvore-3' %}" alt="arvore">
+        <img src="{% static 'assets/imgs/Arvore-3.png' %}" alt="arvore">
         <h1>Árvore</h1>
         <section class="gamificacao-statistics">
             <div>
                 <p>Dias consecutivos</p>
+                <h2>{{ sequencia }}</h2>
             </div>
             <hr>
             <div>
-                <p>Dias para o Proximo visual</p>
+                <p>Dias para o Próximo visual</p>
+                <h2>{{ dias_restantes }}</h2>
             </div>
             <hr>
             <div>
-                <p>Blablabla</p>
+                <p>Status</p>
+                <h2>{% if sequencia > 0 %}Crescendo{% else %}Parada{% endif %}</h2>
             </div>
         </section>
     </div>
