Adicionando fotos as noticias

--- a/templates/admin_secreto_form.html
+++ b/templates/admin_secreto_form.html
@@ -11,12 +11,17 @@
 <div class="admin-container">
     <h1 class="admin-titulo">{{ tipo }} Notícia</h1>
 
-    <form method="post" class="admin-form">
+    <form method="post" enctype="multipart/form-data" class="admin-form">
         {% csrf_token %}
         
         <div class="form-group">
             <label for="{{ form.titulo.id_for_label }}">Título:</label>
             {{ form.titulo }}
+        </div>
+
+        <div class="form-group">
+            <label for="{{ form.imagem.id_for_label }}">Imagem de Capa:</label>
+            {{ form.imagem }}
         </div>
 
         <div class="form-group">
