Colocando opcao de editar data das noticias

--- a/templates/admin_secreto_form.html
+++ b/templates/admin_secreto_form.html
@@ -40,6 +40,11 @@
         </div>
 
         <div class="form-group">
+            <label for="{{ form.data.id_for_label }}">Data e Hora da Publicação:</label>
+            {{ form.data }}
+        </div>
+
+        <div class="form-group">
             <label>Gêneros:</label>
             <div class="generos-checkboxes">
                 {{ form.generos }}
@@ -49,6 +54,7 @@
         {% if form.errors %}
             <div class="alert alert-danger">
                 Por favor, corrija os erros abaixo.
+                {{ form.errors }}
             </div>
         {% endif %}
 
