--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,7 +43,15 @@
                         {% if user.is_authenticated %}
                             <a href="{% url 'jornal:gamificacao' %}"><img src="{% static 'assets/icons/tree.png' %}" alt="Gamificacao"></a>
                             
-                            <a href="{% url 'jornal:configuracoes_conta' %}"><i><img src="{% static 'assets/icons/Avatar.png' %}" alt="user-pic" class="icon-perfil"></i></a>
+                            <a href="{% url 'jornal:configuracoes_conta' %}">
+                                <i>
+                                    {% if user.profile.foto %}
+                                        <img src="{{ user.profile.foto.url }}" alt="user-pic" class="icon-perfil" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;">
+                                    {% else %}
+                                        <img src="{% static 'assets/icons/Avatar.png' %}" alt="user-pic" class="icon-perfil">
+                                    {% endif %}
+                                </i>
+                            </a>
                         
                         {% else %}
                             <a href="{% url 'login' %}"><i><img src="{% static 'assets/icons/Avatar.png' %}" alt="Perfil-icon" class="icon-perfil"></i></a>
